--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     text-transform: uppercase;
     text-shadow: 5px 10px 25px #001f3f;
     color: #FFA500;
+    text-align: center;
 }
 
 .time-text {
@@ -31,6 +32,7 @@ body {
     margin-top: -20px;
     text-shadow: 5px 10px 25px #001f3f;
     -webkit-text-stroke: 5px #001f3f;
+    text-align: center;
 }
 
 .click-text {
